# Autonomous_RaceCar

./: README.md
PC_Server/: Autonomous RaceCar -- PC_Server_Side_Setup.md  README.md
PC_Server/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
PC_Server/catkin_ws/devel/include/hector_mapping/: HectorDebugInfo.h  HectorIterData.h
PC_Server/catkin_ws/devel/lib/car_joystick/: car_joystick
PC_Server/catkin_ws/devel/lib/hector_compressed_map_transport/: map_to_image_node
PC_Server/catkin_ws/devel/lib/hector_geotiff/: geotiff_node  geotiff_saver
PC_Server/catkin_ws/devel/lib/hector_map_server/: hector_map_server
PC_Server/catkin_ws/devel/lib/hector_trajectory_server/: hector_trajectory_server
PC_Server/catkin_ws/src/base_controller/: CMakeLists.txt
PC_Server/catkin_ws/src/car_joystick/: ._src
PC_Server/catkin_ws/src/lane_detection/: CMakeLists.txt
PC_Server/catkin_ws/src/racecar_navigation/: package.xml
PC_Server/catkin_ws/src/serial_communication/: package.xml
RaceCar_Client/: Autonomous RaceCar __Client Side Setup.md  ROS_Navigation_Stack_Setup_guidelines.md  ROS_Setup_Instruction.txt  encoder_odom_creater.cpp
RaceCar_Client/catkin_ws/devel/: .catkin  .rosinstall  setup.sh
RaceCar_Client/catkin_ws/src/car_joystick/: ._package.xml  CMakeLists.txt  package.xml
RaceCar_Client/catkin_ws/src/car_joystick/include/: car_joystick.hpp
RaceCar_Client/catkin_ws/src/car_joystick/src/: ._car_joystick.cpp  car_joystick.cpp
RaceCar_Client/catkin_ws/src/racecar_navigation/: CMakeLists.txt
RaceCar_Client/catkin_ws/src/serial_communication/: CMakeLists.txt
(+200 files in other folders)
